--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Clean&Plant 2004 S.R.L. - Curățenie, natură, profesionalism">
     <title>Clean&Plant 2004</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
+   <link rel="stylesheet" href="style.css"></head>
 <body>
     <header>
         <h1>Clean&Plant 2004 S.R.L.</h1>
