--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Clean&Plant 2004 S.R.L. - Curățenie, natură, profesionalism">
-    <title>Clean&Plant 2004</title>
-   <link rel="stylesheet" href="style.css"></head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Clean&Plant 2004 S.R.L. - curățenie, natură, profesionalism">
+  <title>Clean&Plant 2004</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 <body>
-    <header>
-        <h1>Clean&Plant 2004 S.R.L.</h1>
-        <p>Curățenie. Natură. Profesionalism.</p>
-        <nav>
-            <ul>
-                <li><a href="#home">Acasă</a></li>
-                <li><a href="#services">Servicii</a></li>
-                <li><a href="#gallery">Galerie</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="?lang=de">DE</a> | <a href="?lang=en">EN</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <h1>Clean&Plant 2004 S.R.L.</h1>
+    <p>Curățenie. Natură. Profesionalism.</p>
+    <nav>
+      <ul>
+        <li><a href="#home">Acasă</a></li>
+        <li><a href="#services">Servicii</a></li>
+        <li><a href="#gallery">Galerie</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="?lang=de">DE</a> | <a href="?lang=en">EN</a></li>
+      </ul>
+    </nav>
+  </header>
 
     <main>
         <section id="home">
