--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Clean&Plant 2004 S.R.L. - curățenie, natură, profesionalism">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Clean&Plant 2004 S.R.L. – curățenie, natură, profesionalism" />
   <title>Clean&Plant 2004</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -22,47 +22,47 @@
     </nav>
   </header>
 
-    <main>
-        <section id="home">
-            <h2>Bine ați venit!</h2>
-            <p>Suntem specializați în curățenie profesională, servicii silvice, grădinărit și amenajări interioare.</p>
-        </section>
+  <main>
+    <section id="home">
+      <h2>Bine ați venit!</h2>
+      <p>Suntem specializați în curățenie profesională, servicii silvice, grădinărit și amenajări interioare.</p>
+    </section>
 
-        <section id="services">
-            <h2>Serviciile noastre</h2>
-            <ul>
-                <li>Curățenie rezidențială și industrială</li>
-                <li>Lucrări silvice (fără despăduriri)</li>
-                <li>Îngrijire spații verzi</li>
-                <li>Amenajări interioare și reparații</li>
-            </ul>
-        </section>
+    <section id="services">
+      <h2>Serviciile noastre</h2>
+      <ul>
+        <li>Curățenie rezidențială și industrială</li>
+        <li>Lucrări silvice (fără despăduriri)</li>
+        <li>Îngrijire spații verzi</li>
+        <li>Amenajări interioare și reparații</li>
+      </ul>
+    </section>
 
-        <section id="gallery">
-            <h2>Galerie Foto</h2>
-            <div class="gallery">
-                <img src="assets/images/photo1.jpg" alt="Serviciu 1">
-                <img src="assets/images/photo2.jpg" alt="Serviciu 2">
-                <img src="assets/images/photo3.jpg" alt="Serviciu 3">
-            </div>
-        </section>
+    <section id="gallery">
+      <h2>Galerie Foto</h2>
+      <div class="gallery">
+        <img src="photo1.jpg" alt="Serviciu 1">
+        <img src="photo2.jpg" alt="Serviciu 2">
+        <img src="photo3.jpg" alt="Serviciu 3">
+      </div>
+    </section>
 
-        <section id="contact">
-            <h2>Contactați-ne</h2>
-            <form action="#" method="POST">
-                <input type="text" name="name" placeholder="Numele Dvs" required>
-                <input type="email" name="email" placeholder="Emailul Dvs" required>
-                <textarea name="message" placeholder="Mesajul Dvs" required></textarea>
-                <button type="submit">Trimite</button>
-            </form>
-            <p>Email: info@cleanandplant2004.com</p>
-            <p>Telefon: +49 7248 67610</p>
-            <p>WhatsApp: <a href="https://wa.me/49724867610" target="_blank">Deschide conversație</a></p>
-        </section>
-    </main>
+    <section id="contact">
+      <h2>Contactați-ne</h2>
+      <form action="#" method="POST">
+        <input type="text" name="name" placeholder="Numele dvs" required />
+        <input type="email" name="email" placeholder="Emailul dvs" required />
+        <textarea name="message" placeholder="Mesajul dvs" required></textarea>
+        <button type="submit">Trimite</button>
+      </form>
+      <p>Email: info@cleanandplant2004.com</p>
+      <p>Telefon: +49 7248 67610</p>
+      <p>WhatsApp: <a href="https://wa.me/49724867610" target="_blank">Deschide conversație</a></p>
+    </section>
+  </main>
 
-    <footer>
-        <p>&copy; 2025 Clean&Plant 2004 S.R.L.</p>
-    </footer>
+  <footer>
+    <p>© 2025 Clean&Plant 2004 S.R.L.</p>
+  </footer>
 </body>
 </html>
